--- a/generateMatches/style.css
+++ b/generateMatches/style.css
@@ -32,6 +32,25 @@ span {
     letter-spacing: 0.08em;
 }
 
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td {
+    border-spacing: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+    border-collapse: separate;
+}
+
 button {
     border: none
 }
@@ -136,6 +155,7 @@ input::-webkit-inner-spin-button {
     font-size: 24px;
     font-weight: 600;
     transition: 0.2s;
+    cursor: pointer;
 }
 
 #number-teams-btn:hover,
@@ -148,9 +168,33 @@ input::-webkit-inner-spin-button {
     margin-top: 64px;
 }
 
-
-#matches-table {
+.matches-table-container {
+    margin-top: 180px;
+    padding: 28px 40px 36px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 16px;
+    background: #64748B;
+    width: 100%;
+    max-width: 550px;
+    flex-direction: column;
     display: none;
+}
+
+.matches-table-container h2 {
+    margin-bottom: 36px;
+}
+
+#matches-table,
+.matches-table-container {
+    display: none;
+}
+
+.matches {
+    z-index: 99;
+    height: 50px;
+    border-radius: 8px;
+
 }
 
 h1,
