--- a/generateMatches/style.css
+++ b/generateMatches/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Ubuntu+Mono:wght@400;700&display=swap');
 
 * {
     margin: 0;
@@ -6,10 +6,14 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background: #334155;
     padding: 64px 160px 180px;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
 }
 
 h1 {
@@ -20,7 +24,6 @@ h1 {
 
 
 input {
-    -webkit-appearance: none;
     outline: none;
     border: none;
 }
@@ -170,7 +173,7 @@ input::-webkit-inner-spin-button {
 
 .matches-table-container {
     margin-top: 180px;
-    padding: 28px 40px 36px;
+    padding: 28px 50px 36px;
     align-items: center;
     justify-content: center;
     border-radius: 16px;
@@ -190,12 +193,73 @@ input::-webkit-inner-spin-button {
     display: none;
 }
 
-.matches {
-    z-index: 99;
-    height: 50px;
-    border-radius: 8px;
+#matches-table {
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
 
 }
+
+.matches {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 50px;
+    padding: 15px 22px;
+    width: 100%;
+    border-radius: 8px;
+    background: #E2E8F0;
+}
+
+.matches>span {
+    color: #334155;
+    font-size: 24px;
+    font-family: 'Ubuntu Mono', monospace;
+    ;
+    text-align: center;
+    letter-spacing: normal;
+}
+
+.matches-table-score {
+    display: flex;
+    width: fit-content;
+    align-items: center;
+    justify-content: center;
+    background: #CBD5E1;
+    border-radius: 8px;
+    padding: 4px 16px;
+    gap: 8px;
+}
+
+.matches-table-score>input {
+    font-family: 'Ubuntu Mono', monospace;
+    ;
+    height: auto;
+    width: 30px;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 700;
+    opacity: 20%;
+    text-align: center;
+    border-radius: 8px;
+    color: #000000
+}
+
+.matches-table-score>input:focus {
+    background: #fff;
+    opacity: 100%;
+}
+
+.matches-table-score>span {
+    color: #334155;
+    font-weight: 700;
+}
+
+.matches>img {
+    width: 30px;
+}
+
 
 h1,
 h2,
