--- a/generateMatches/style.css
+++ b/generateMatches/style.css
@@ -32,8 +32,16 @@ span {
     color: #fff;
     font-size: 20px;
     font-weight: 400;
-    letter-spacing: 0.08em;
+    letter-spacing: 0;
 }
+
+h1,
+h2,
+label,
+td {
+    color: #fff;
+}
+
 
 table,
 caption,
@@ -147,7 +155,9 @@ input::-webkit-inner-spin-button {
 }
 
 #number-teams-btn,
-#generate-btn {
+#generate-btn,
+#matches-btn,
+#edit-matches-btn {
     max-width: 350px;
     width: 100%;
     margin-top: 64px;
@@ -162,13 +172,32 @@ input::-webkit-inner-spin-button {
 }
 
 #number-teams-btn:hover,
-#generate-btn:hover {
+#generate-btn:hover,
+#matches-btn:hover,
+#edit-matches-btn:hover {
     background: #cbd5e1;
 }
 
 #generate-btn {
     display: none;
     margin-top: 64px;
+}
+
+#edit-matches-btn {
+    display: flex;
+    gap: 12px;
+    justify-content: center;
+    align-items: center;
+}
+
+#edit-matches-btn>img {
+    width: 25px;
+}
+
+#edit-matches-btn>span {
+    color: #334155;
+    font-size: 24px;
+    font-weight: 600;
 }
 
 .matches-table-container {
@@ -261,21 +290,104 @@ input::-webkit-inner-spin-button {
 }
 
 
-h1,
-h2,
-label,
-td {
-    color: #fff;
+#qualifying {
+    display: none;
+    padding: 28px 50px 36px;
+    margin-top: 180px;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 16px;
+    background: #64748B;
+    width: 100%;
+    max-width: 550px;
+}
+
+.qualify {
+    display: flex;
+    width: 100%;
+    gap: 8px;
+}
+
+.qualify>span {
+    font-family: 'Inter', sans-serif;
+    color: #000000;
+    font-weight: 600;
+}
+
+.container-qualify>div:first-child {
+    border-radius: 8px 0 8px 8px;
+    filter: drop-shadow(0px -2px 4px rgba(0, 0, 0, 0.25));
+}
+
+.qualifying-table-header {
+    font-family: 'Ubuntu Mono', monospace;
+    font-weight: 700;
+    margin-top: 36px;
+    display: flex;
+    width: 100%;
+    align-items: flex-end;
+}
+
+.table-header-content {
+    display: flex;
+    gap: 13px;
+    text-align: center;
+    margin-left: 28%;
+    border-radius: 8px 8px 0px 0px;
+    background: #CBD5E1;
+    width: 100%;
+}
+
+.table-header-content>span {
+    width: 30px;
+    padding: 4px 0;
+}
+
+#table-header-title {
+    align-items: flex-start;
+    width: 110px;
+}
+
+.container-qualify {
+    width: 100%;
+}
+
+.container-qualify img {
+    width: 20px;
 }
 
 .qualify-row {
-    border-top: 2px solid white;
+    font-family: 'Ubuntu Mono', monospace;
+    font-weight: 700;
+    display: flex;
+    width: 100%;
+    align-items: flex-end;
+    padding: 16px 14px;
+    background: #E2E8F0;
+    margin-bottom: 18px;
+    border-radius: 8px;
+    align-items: center;
+}
+
+
+.qualify-data {
+    display: flex;
+    gap: 13px;
+    margin-left: 20%;
+}
+
+.qualify-data>span {
+    text-align: center;
+    width: 30px;
+    padding: 4px 0;
+    color: #000000;
+}
+
+.points,
+.goals-diff {
+    font-weight: 700;
 }
 
 .qualify-row .qualify {
-    width: 150px;
-}
-
-.qualify-row .left-space {
-    padding-left: 6px;
+    width: 110px;
 }
