--- a/generateMatches/style.css
+++ b/generateMatches/style.css
@@ -12,15 +12,16 @@ html {
 
 body {
     background: #334155;
-    padding: 64px 160px 180px;
+    padding: 4rem 10rem 11.25rem;
     font-family: 'Inter', sans-serif;
 }
 
 h1 {
     font-weight: 700;
-    font-size: 38px;
+    font-size: 2.375rem;
     letter-spacing: 0.05em;
 }
+
 
 
 input {
@@ -30,7 +31,7 @@ input {
 
 span {
     color: #fff;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 400;
     letter-spacing: 0;
 }
@@ -68,7 +69,7 @@ button {
 
 label {
     font-weight: 700;
-    font-size: 24px;
+    font-size: 1.5rem;
     text-align: center;
 }
 
@@ -81,41 +82,41 @@ label {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
+    gap: 0.625rem;
 }
 
 .number-teams-container {
-    margin-top: 44px;
-    padding: 28px 62px 36px;
+    margin-top: 2.75rem;
+    padding: 1.75rem 3.875rem 2.25rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 16px;
+    border-radius: 1rem;
     background: #64748B;
     width: 100%;
-    max-width: 550px;
+    max-width: 34.375rem;
 }
 
 .team-names {
-    margin-top: 180px;
-    padding: 28px 40px 36px;
+    margin-top: 11.25rem;
+    padding: 1.75rem 2.5rem 2.25rem;
     align-items: center;
     justify-content: center;
-    border-radius: 16px;
+    border-radius: 1rem;
     background: #64748B;
     width: 100%;
-    max-width: 550px;
+    max-width: 34.375rem;
 
     display: none;
     flex-wrap: wrap;
 }
 
 .teams-select {
-    margin-top: 44px;
+    margin-top: 2.75rem;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 30px;
+    gap: 1.875rem;
 }
 
 .teams-select label {
@@ -130,7 +131,6 @@ label {
 
 .team-names>select::before {
     content: "1";
-
 }
 
 input::-webkit-outer-spin-button,
@@ -141,31 +141,31 @@ input::-webkit-inner-spin-button {
 
 #number-teams {
     background: #E2E8F0;
-    width: 100px;
-    border-radius: 8px;
-    margin-top: 36px;
+    width: 6.25rem;
+    border-radius: 0.5rem;
+    margin-top: 2.25rem;
     aspect-ratio: 9/5;
     text-align: center;
-    font-size: 28px;
+    font-size: 1.75rem;
     font-weight: 600;
 }
 
 #number-teams:focus {
-    border: 1.5px solid #334155;
+    border: 0.0938rem solid #334155;
 }
 
 #number-teams-btn,
 #generate-btn,
 #matches-btn,
 #edit-matches-btn {
-    max-width: 350px;
+    max-width: 21.875rem;
     width: 100%;
-    margin-top: 64px;
+    margin-top: 4rem;
     background: #E2E8F0;
-    padding: 18px;
-    border-radius: 8px;
+    padding: 1.125rem;
+    border-radius: 0.5rem;
     color: #334155;
-    font-size: 24px;
+    font-size: 1.56rem;
     font-weight: 600;
     transition: 0.2s;
     cursor: pointer;
@@ -178,43 +178,47 @@ input::-webkit-inner-spin-button {
     background: #cbd5e1;
 }
 
+#edit-matches-btn:hover img {
+    transform: scale(1.1);
+}
+
 #generate-btn {
     display: none;
-    margin-top: 64px;
+    margin-top: 4rem;
 }
 
 #edit-matches-btn {
     display: flex;
-    gap: 12px;
+    gap: 0.75rem;
     justify-content: center;
     align-items: center;
 }
 
 #edit-matches-btn>img {
-    width: 25px;
+    width: 1.5625rem;
 }
 
 #edit-matches-btn>span {
     color: #334155;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
 }
 
 .matches-table-container {
-    margin-top: 180px;
-    padding: 28px 50px 36px;
+    margin-top: 11.25rem;
+    padding: 1.75rem 3.125rem 2.25rem;
     align-items: center;
     justify-content: center;
-    border-radius: 16px;
+    border-radius: 1rem;
     background: #64748B;
     width: 100%;
-    max-width: 550px;
+    max-width: 34.375rem;
     flex-direction: column;
     display: none;
 }
 
 .matches-table-container h2 {
-    margin-bottom: 36px;
+    margin-bottom: 2.25rem;
 }
 
 #matches-table,
@@ -224,7 +228,7 @@ input::-webkit-inner-spin-button {
 
 #matches-table {
     flex-direction: column;
-    gap: 20px;
+    gap: 1.25rem;
     width: 100%;
 
 }
@@ -233,18 +237,17 @@ input::-webkit-inner-spin-button {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 50px;
-    padding: 15px 22px;
+    height: 3.125rem;
+    padding: 0.9375rem 1.375rem;
     width: 100%;
-    border-radius: 8px;
+    border-radius: 0.5rem;
     background: #E2E8F0;
 }
 
 .matches>span {
     color: #334155;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: 'Ubuntu Mono', monospace;
-    ;
     text-align: center;
     letter-spacing: normal;
 }
@@ -255,23 +258,23 @@ input::-webkit-inner-spin-button {
     align-items: center;
     justify-content: center;
     background: #CBD5E1;
-    border-radius: 8px;
-    padding: 4px 16px;
-    gap: 8px;
+    border-radius: 0.5rem;
+    padding: 0.25rem 1rem;
+    gap: 0.5rem;
 }
 
 .matches-table-score>input {
     font-family: 'Ubuntu Mono', monospace;
     ;
     height: auto;
-    width: 30px;
+    width: 1.875rem;
     align-items: center;
     justify-content: center;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 700;
     opacity: 20%;
     text-align: center;
-    border-radius: 8px;
+    border-radius: 0.5rem;
     color: #000000
 }
 
@@ -286,26 +289,26 @@ input::-webkit-inner-spin-button {
 }
 
 .matches>img {
-    width: 30px;
+    width: 1.875rem;
 }
 
 
 #qualifying {
     display: none;
-    padding: 28px 50px 36px;
-    margin-top: 180px;
+    padding: 1.75rem 3.125rem 2.25rem;
+    margin-top: 11.25rem;
     flex-direction: column;
     align-items: center;
-    border-radius: 16px;
+    border-radius: 1rem;
     background: #64748B;
     width: 100%;
-    max-width: 550px;
+    max-width: 34.375rem;
 }
 
 .qualify {
     display: flex;
     width: 100%;
-    gap: 8px;
+    gap: 0.5rem;
 }
 
 .qualify>span {
@@ -315,14 +318,14 @@ input::-webkit-inner-spin-button {
 }
 
 .container-qualify>div:first-child {
-    border-radius: 8px 0 8px 8px;
-    filter: drop-shadow(0px -2px 4px rgba(0, 0, 0, 0.25));
+    border-radius: 0.5rem 0 0.5rem 0.5rem;
+    filter: drop-shadow(0rem -0.125rem 0.25rem rgba(0, 0, 0, 0.25));
 }
 
 .qualifying-table-header {
     font-family: 'Ubuntu Mono', monospace;
     font-weight: 700;
-    margin-top: 36px;
+    margin-top: 2.25rem;
     display: flex;
     width: 100%;
     align-items: flex-end;
@@ -330,22 +333,23 @@ input::-webkit-inner-spin-button {
 
 .table-header-content {
     display: flex;
-    gap: 13px;
+    gap: 0.8125rem;
     text-align: center;
     margin-left: 28%;
-    border-radius: 8px 8px 0px 0px;
+    border-radius: 0.5rem 0.5rem 0rem 0rem;
     background: #CBD5E1;
     width: 100%;
+    padding-right: 0.5rem;
 }
 
 .table-header-content>span {
-    width: 30px;
-    padding: 4px 0;
+    width: 1.875rem;
+    padding: 0.25rem 0;
 }
 
 #table-header-title {
     align-items: flex-start;
-    width: 110px;
+    width: 6.875rem;
 }
 
 .container-qualify {
@@ -353,7 +357,7 @@ input::-webkit-inner-spin-button {
 }
 
 .container-qualify img {
-    width: 20px;
+    width: 1.25rem;
 }
 
 .qualify-row {
@@ -362,24 +366,24 @@ input::-webkit-inner-spin-button {
     display: flex;
     width: 100%;
     align-items: flex-end;
-    padding: 16px 14px;
+    padding: 1rem 0.875rem;
     background: #E2E8F0;
-    margin-bottom: 18px;
-    border-radius: 8px;
+    margin-bottom: 1.125rem;
+    border-radius: 0.5rem;
     align-items: center;
 }
 
 
 .qualify-data {
     display: flex;
-    gap: 13px;
+    gap: 0.8125rem;
     margin-left: 20%;
 }
 
 .qualify-data>span {
     text-align: center;
-    width: 30px;
-    padding: 4px 0;
+    width: 1.875rem;
+    padding: 0.25rem 0;
     color: #000000;
 }
 
@@ -389,5 +393,72 @@ input::-webkit-inner-spin-button {
 }
 
 .qualify-row .qualify {
-    width: 110px;
+    width: 6.875rem;
+}
+
+@media (max-width: 53.125rem) {
+    body {
+        background: #334155;
+        padding: 4rem 1.125rem 5.625rem;
+    }
+
+    #qualifying {
+        padding: 1.625rem 1rem 2.25rem;
+    }
+
+    .table-header-content {
+        margin-left: 36%;
+    }
+
+    #qualify-data {
+        margin-left: 24%;
+    }
+
+    .qualify-row {
+        padding: 0.75rem 0.5rem;
+    }
+}
+
+@media (max-width: 34.375rem) {
+    html {
+        font-size: 70%;
+    }
+
+    .number-teams-container {
+        padding: 1.75rem 1.25rem 2.25rem
+    }
+
+    .team-names {
+        padding: 1.25rem 1.25rem 1.25rem;
+    }
+
+    .matches-table-container {
+        padding: 1.75rem 1.25rem 2.25rem;
+    }
+
+    .matches {
+        padding: 0.9375rem 0.75rem;
+    }
+
+    .qualifying-table-header {
+        justify-content: space-between;
+    }
+
+    .table-header-content {
+        margin-left: 0;
+        width: fit-content;
+    }
+
+    .qualify {
+        gap: 0.25rem;
+        width: fit-content;
+    }
+
+    .qualify-row {
+        justify-content: space-between;
+    }
+
+    .qualify-data {
+        margin-left: 0;
+    }
 }
